--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,19 @@
-@use 'core' as *;
+@use "core" as *;
+
+.inline-icon_menu-item-arrow {
+  &::after {
+    content: "";
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='25' viewBox='0 0 24 25' fill='none'%3E%3Cpath d='M13.75 7.63L19.25 12.88L13.75 18.13M19 12.88H4.75' stroke='%2314317F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: rem(24);
+    height: rem(25);
+    transform: rotate(0deg);
+  }
+}
+
+.inline-icon_menu-item-arrow_rotate {
+  &::after {
+    transform: rotate(180deg);
+  }
+}
