Додано відступ між стовпцями в стилях заголовка для покращення візуального сприйняття. Змінено параметри grid для меню.

--- a/src/styles/core/components/header.scss
+++ b/src/styles/core/components/header.scss
@@ -104,6 +104,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: start;
+    column-gap: rem(48);
   }
 
   &__menu-dropdown-list {
