--- a/src/styles/core/components/header.scss
+++ b/src/styles/core/components/header.scss
@@ -15,6 +15,7 @@
   z-index: 9999999999999999;
 
   &__container {
+    position: relative;
     max-width: rem(1200);
     padding: 0 rem(16);
     margin: 0 auto;
@@ -290,14 +291,14 @@
 
 .header-overlay {
   z-index: 9999999999999999;
-  position: fixed;
-  height: calc(100vh - var(--header-height));
-  height: calc(100dvh - var(--header-height));
+  position: absolute;
+  height: calc(100vh - 12.5rem);
+  height: calc(100dvh - 12.5rem);
   width: 100%;
   box-shadow: 0px 20px 35px 0px rgba(2, 6, 32, 0.2);
   overflow: auto;
   max-width: rem(400);
-  top: var(--header-height);
+  top: 100%;
   right: 0;
   background-color: #fff;
   transform: translateX(100%);
