--- a/src/styles/core/components/header.scss
+++ b/src/styles/core/components/header.scss
@@ -125,6 +125,15 @@ html.is-lock {
       display: flex;
       align-items: center;
       column-gap: rem(8);
+
+      &.is-open {
+        &::after {
+          transform: rotate(-180deg);
+        }
+        ul {
+          display: block;
+        }
+      }
       &::after {
         content: "";
         background-image: url("data:image/svg+xml,%3Csvg%20width%3D%228%22%20height%3D%226%22%20viewBox%3D%220%200%208%206%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7.25%201.25L4%204.75L0.75%201.25%22%20stroke%3D%22%2314317F%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
